--- a/index - 161224.html
+++ b/index - 161224.html
@@ -7,67 +7,55 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>マスターHTML</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/css/swiper.min.css">
+    <link rel="stylesheet" href="./slick/slick.css">
+    <link rel="stylesheet" href="./slick/slick-theme.css">
+    <link rel="stylesheet" href="./vegas/vegas.min.css">
     <link rel="stylesheet" href="./css/base.css">
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <div class="navbar-header">
-                <button class="navbar-toggler float-xs-right hidden-sm-up collapsed" type="button" data-toggle="collapse" data-target="#bd-main-nav" aria-controls="bd-main-nav" aria-expanded="false" aria-label="Toggle navigation">MENU</button>
-                <a class="navbar-brand" href="/">企業ロゴ</a>
-            </div>
-            <div class="navbar-toggleable-xs collapse" id="bd-main-nav" aria-expanded="false">
-                <ul class="nav navbar-nav float-sm-right">
-                    <li class="nav-item active">
-                        <a class="nav-item nav-link " href="#">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item nav-link active" href="#">Documentation</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item nav-link " href="#">Examples</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item nav-link" href="#">Themes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item nav-link" href="#">Expo</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item nav-link" href="#">Blog</a>
-                    </li>
+    <h1>Bootstrap4を使用したテンプレート</h1>
+    <div class="container">
+        <h2>ナビゲーション</h2>
+        <nav class="navbar navba-light bg-faded">
+            <button class="navbar-toggler hidden-sm-up collapsed" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header" aria-expanded="false" aria-label="Toggle navigation"></button>
+            <div class="navbar-toggleable-xs collapse" id="navbar-header" aria-expanded="false">
+                <a class="navbar-brand" href="#">企業ロゴ</a>
+                <ul class="nav navbar-nav">
+                    <li class="nav-item"><a href="#">HOME</a></li>
+                    <li class="nav-item"><a href="#">グローバルナビ01</a></li>
+                    <li class="nav-item"><a href="#">グローバルナビ02</a></li>
+                    <li class="nav-item"><a href="#">グローバルナビ03</a></li>
+                    <li class="nav-item"><a href="#">グローバルナビ04</a></li>
                 </ul>
             </div>
+        </nav>
+    </div>
+    <div class="jumbotron">
+        <div class="container text-xs-center">
+            <h1>メインイメージ</h1>
+            <p class="lead">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、（100文字）</p>
         </div>
-    </nav>
-    <div class="swiper-container wrap-hero">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide" style="background-image:url(./img/1000x620.png)">
-                <div class="container text-xs-center">
-                    <h1>Bootstrap4を使用したテンプレート</h1>
-                    <p class="lead">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、（100文字）</p>
-                </div>
-            </div>
-            <div class="swiper-slide" style="background-image:url(./img/1200x740.png)">
-                <div class="container text-xs-center">
-                    <h1>メインイメージ 2</h1>
-                    <p class="lead">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、（100文字）</p>
-                </div>
-            </div>
-            <div class="swiper-slide" style="background-image:url(./img/1600x990.png)">
-                <div class="container text-xs-center">
-                    <h1>メインイメージ 3</h1>
-                    <p class="lead">この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。この文章はダミーです。文字の大きさ、（100文字）</p>
-                </div>
-            </div>
+    </div>
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active"><img src="./img/1600x990.png" alt="First slide"></div>
+            <div class="carousel-item"><img src="./img/1600x990.png" alt="Second slide"></div>
+            <div class="carousel-item"><img src="./img/1600x990.png" alt="Third slide"></div>
         </div>
-        <div class="swiper-pagination"></div>
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="icon-prev" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="icon-next" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
     <div class="container">
         <h2>メインキャッチコピー</h2>
@@ -95,31 +83,12 @@
     </div>
     <div class="container">
         <h2>バナー</h2>
-        <!-- <ul class="slider list-inline" id="slick-bnr">
+        <ul class="slider list-inline" id="slick-bnr">
             <li><a href="#"><img src="./img/320x100.png" srcset="./img/320x100.png 1x, ./img/320x100@2x.png 2x" alt="" class="aligncenter"></a></li>
             <li><a href="#"><img src="./img/320x100.png" srcset="./img/320x100.png 1x, ./img/320x100@2x.png 2x" alt="" class="aligncenter"></a></li>
             <li><a href="#"><img src="./img/320x100.png" srcset="./img/320x100.png 1x, ./img/320x100@2x.png 2x" alt="" class="aligncenter"></a></li>
             <li><a href="#"><img src="./img/320x100.png" srcset="./img/320x100.png 1x, ./img/320x100@2x.png 2x" alt="" class="aligncenter"></a></li>
-        </ul> -->
-        <div class="swiper-container wrap-carousel">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <a href="#"><img src="./img/320x100.png" srcset="./img/320x100.png 1x, ./img/320x100@2x.png 2x" alt="" class="aligncenter"></a>
-                </div>
-                <div class="swiper-slide">
-                    <a href="#"><img src="./img/320x100.png" srcset="./img/320x100.png 1x, ./img/320x100@2x.png 2x" alt="" class="aligncenter"></a>
-                </div>
-                <div class="swiper-slide">
-                    <a href="#"><img src="./img/320x100.png" srcset="./img/320x100.png 1x, ./img/320x100@2x.png 2x" alt="" class="aligncenter"></a>
-                </div>
-                <div class="swiper-slide">
-                    <a href="#"><img src="./img/320x100.png" srcset="./img/320x100.png 1x, ./img/320x100@2x.png 2x" alt="" class="aligncenter"></a>
-                </div>
-            </div>
-            <!-- Navigation -->
-            <div class="swiper-button-next swiper-button-white"></div>
-            <div class="swiper-button-prev swiper-button-white"></div>
-        </div>
+        </ul>
     </div>
     <div class="container">
         <h2>インフォメーション</h2>
@@ -150,7 +119,7 @@
                             img/HD001_350A_cuu2ze_c_scale,w_979.jpg 979w,
                             img/HD001_350A_cuu2ze_c_scale,w_1116.jpg 1116w,
                             img/HD001_350A_cuu2ze_c_scale,w_1140.jpg 1140w" src="img/HD001_350A_cuu2ze_c_scale,w_1140.jpg" alt="" class="figure-img img-fluid rounded"> -->
-                        <img src="./img/hd001.jpg" srcset="./img/hd001.jpg 1x, ./img/hd001@2x.jpg 2x" alt="" width="100%" class="figure-img img-fluid rounded">
+                        <img src="./img/hd001.jpg" srcset="./img/hd001.jpg 1x, ./img/hd001@2x.jpg 2x" alt="" class="figure-img img-fluid rounded">
                         <figcaption class="figure-caption">イメージキャプション</figcaption>
                     </figure>
                 </div>
@@ -187,10 +156,11 @@
     <script src="https://typesquare.com/accessor/script/typesquare.js?7UJ5ctIZVVQ%3D" charset="utf-8"></script>
     <script src="./js/tether.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/js/swiper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/js/swiper.jquery.min.js"></script>
+    <script src="./slick/slick.min.js"></script>
+    <script src="./slick/mySlick.js"></script>
+    <script src="./vegas/vegas.min.js"></script>
+    <script src="./vegas/myVegas.js"></script>
     <script src="./js/common.js"></script>
-    <script src="./js/swiper.js"></script>
 </body>
 
 </html>
